# bert-cli

./: Cargo.toml  README.md  backup.json
.github/workflows/: release.yaml
src/: backup_manager.rs  command_handler.rs  config.rs  homebrew.rs  main.rs  package_manager.rs  platform.rs  self_update.rs
src/node/: api.rs  manager.rs  mod.rs  types.rs
